--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-transform-arrow-functions": "^7.23.3",
     "@babel/plugin-transform-shorthand-properties": "^7.23.3",
     "@babel/plugin-transform-template-literals": "^7.23.3",
+    "@cspell/eslint-plugin": "^8.3.2",
     "@react-navigation/devtools": "^6.0.20",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.6",
