--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@react-navigation/native": "^6.1.9",
     "@reduxjs/toolkit": "^1.9.7",
     "@supabase/supabase-js": "2.39.1",
-    "expo": "next",
-    "expo-asset": "~9.0.1",
-    "expo-constants": "~15.4.2",
+    "expo": "~50.0.3",
+    "expo-asset": "~9.0.2",
+    "expo-constants": "~15.4.5",
     "expo-document-picker": "~11.10.1",
-    "expo-linking": "~6.2.1",
-    "expo-router": "^3.4.1",
-    "expo-splash-screen": "~0.26.1",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.5",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "i18next": "^23.7.13",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -21,13 +21,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.0.0",
-    "react-native": "0.73.1",
+    "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.11.5",
-    "react-native-reanimated": "~3.6.1",
-    "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "~3.27.0",
-    "react-native-svg": "14.0.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
